--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -17,7 +17,8 @@
 }
 
 .header__add-clothes-btn {
-  margin: 0 20px 0 auto;
+  margin: 0 20px;
+  border: none;
 }
 
 .header__user-container {
@@ -30,6 +31,10 @@
   margin: 0;
 }
 
-.header__add-clothes-btn {
-  border: none;
+.header__profile-container {
+  display: flex;
+  align-items: center; /* Vertically align items in the container */
+  justify-content: flex-end; /* Push items to the right of the container */
+  /* gap: 16px; Optional: add some space between the elements */
+  margin-left: auto;
 }
