--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -16,10 +16,24 @@
   border-radius: 19px;
 }
 
-.card__name {
+/* .card__name {
   position: absolute;
   top: 15px;
   margin: 0;
+} */
+
+.card__name {
+  font-family: "Cabinet Grotesk", sans-serif;
+  font-weight: 700;
+  line-height: 20px;
+  font-size: 16px;
+  position: absolute;
+  top: 15px;
+  margin: 0;
+  background-color: #ffffff;
+  padding: 2px 12px 2px 12px;
+  color: #000000;
+  opacity: 60%;
 }
 
 .card__image {
