--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -39,6 +39,7 @@
   border: none;
   background-color: transparent;
   background-repeat: no-repeat;
+  cursor: pointer;
 }
 
 .modal__content {
@@ -75,12 +76,17 @@
 }
 
 .modal__submit_type_submit {
-  background: #0000004d;
+  background: #000000;
   width: 124px;
   height: 36px;
   border-radius: 4px;
   color: #ffffff;
   border: none;
+}
+
+.modal__submit_type_submit:hover {
+  background-color: #00000099;
+  cursor: pointer;
 }
 
 .modal__image {
