--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -7,10 +7,12 @@
 
 .page {
   background-color: #f3f3f3;
+  font-family: "Cabinet Grotesk";
 }
 
 .page__content {
   max-width: 1360px;
   margin: 0 auto;
   padding: 0 20px;
+  font-family: "Cabinet Grotesk";
 }
