--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -44,3 +44,24 @@
   text-decoration: none;
   color: black;
 }
+
+.header__link-signup {
+  margin-left: 20px;
+}
+
+.header__link-login {
+  margin-left: 20px;
+}
+
+.header__avatar--placeholder {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #ccc;
+  color: white;
+  font-size: 18px;
+  font-weight: bold;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
