--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -47,10 +47,14 @@
 
 .header__link-signup {
   margin-left: 20px;
+  border: none;
+  background-color: transparent;
 }
 
 .header__link-login {
   margin-left: 20px;
+  border: none;
+  background-color: transparent;
 }
 
 .header__avatar--placeholder {
