--- a/src/components/ItemModal/ItemModal.css
+++ b/src/components/ItemModal/ItemModal.css
@@ -40,7 +40,7 @@
 }
 
 .modal__delete-button {
-  color: #ff4d00;
+  color: hsl(18, 100%, 50%);
   border: none;
   background-color: transparent;
   gap: 0px;
@@ -52,4 +52,8 @@
 .modal__delete-button:hover {
   color: darkred;
   cursor: pointer;
+}
+
+.modal__delete-button_hidden {
+  visibility: hidden;
 }
