--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -40,3 +40,11 @@
   width: 100%;
   border-radius: 19px;
 }
+
+.card__like-button {
+  background-image: url("../../assets/like-button.png");
+  width: 18px;
+  height: 15px;
+  top: 300px;
+  left: 1279px;
+}
