--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -8,6 +8,7 @@
   text-decoration-skip-ink: none;
 
   width: 323px;
+  height: 326px;
   position: relative;
   justify-content: center;
   display: flex;
@@ -75,5 +76,4 @@
   background-color: transparent;
   top: 20px;
   right: 100px;
-  /* background-color: #000000; */
 }
